# how-is-today

./: .gitignore  README.md  pyproject.toml  test_today.py  test_today.py.bak  today.py  today.py.backup
.openclaw/: memory.md  memory.md.backup  workspace-state.json
